<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <CheckBox
            android:id="@+id/organize_icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/organize_icons" />

        <CheckBox
            android:id="@+id/organize_colors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/organize_colors" />

        <CheckBox
            android:id="@+id/organize_corners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/organize_corners" />

        <CheckBox
            android:id="@+id/organize_positions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/organize_positions" />
    </LinearLayout>

</ScrollView>