<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/form_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/reg_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#aaffffff" />

        <LinearLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/form_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/reg_user_hint"
                android:inputType="text"
                android:maxLength="32" />

            <EditText
                android:id="@+id/form_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:cursorVisible="true"
                android:focusableInTouchMode="false"
                android:hint="@string/reg_email_hint"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/form_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/reg_pwd_hint"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/form_pwd_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/reg_pwd_confirm_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/form_submit"
                style="@style/AccentTint_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/reg_submit" />
        </LinearLayout>

        <Button
            android:id="@+id/logout"
            style="@style/AccentTint_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/login_logout"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>