<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/upl_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/upl_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#aaffffff" />

        <LinearLayout
            android:id="@+id/upl_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--<EditText-->
                <!--android:id="@+id/upl_name"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="16dp"-->
                <!--android:hint="@string/upl_hint_name"-->
                <!--android:inputType="text"-->
                <!--android:maxLength="64" />-->

            <Spinner
                android:id="@+id/upl_device_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:inputType="text"
                android:maxLength="64"
                android:title="@string/upl_hint_device_type" />

            <EditText
                android:id="@+id/upl_device_type_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                android:hint="@string/upl_hint_device_type"
                android:inputType="text"
                android:maxLength="64" />

            <AutoCompleteTextView
                android:id="@+id/upl_manufacturer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/upl_hint_manufacturer"
                android:inputType="text"
                android:maxLength="64" />

            <EditText
                android:id="@+id/upl_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/upl_hint_model"
                android:inputType="text"
                android:maxLength="64" />

            <Button
                android:id="@+id/upl_submit"
                style="@style/AccentTint_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/upl_submit"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>